# Interpreter

./: CMakeLists.txt  README.md  main.c
include/: CMakeLists.txt  Expression.c  Expression.h  Tokenizer.c  Tokenizer.h  ast.c  ast.h  datastructure.c  datastructure.h  hash.c  hash.h  interpreter.c  interpreter.h  parser.c  parser.h  variable.c  variable.h
sample/: sample_pgm.txt
src/: CMakeLists.txt  Expression.c  Tokenizer.c  ast.c  hash.c  interpreter.c  parser.c  variable.c
